[package]
name = "nvflex-sys"
version = "0.1.0"
edition = "2021"
authors = ["Vurv78 <vurvdevelops@gmail.com>"]
description = "Simple bindings for NVIDIA's FleX library using bindgen"
repository = "https://github.com/Vurv78/nvflex-rs"
categories = ["external-ffi-bindings", "graphics"]
keywords = ["graphics", "gamedev"]
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[build-dependencies]
bindgen = "0.59.2"

[features]
default = ["D3D"]

# Linking
D3D = []
CUDA = []